[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youqu"
version = "2.8.0"
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]

description = "youqu"
readme = "youqu/README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.optional-dependencies]

[project.scripts]
youqu-startproject = "youqu.startproject:cli"

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu",
]

[project.urls]
Source = "https://github.com/linuxdeepin/youqu"
Documentation = "https://github.com/linuxdeepin/youqu"
